--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test",
-      "pre-push": "npm run lint && npm test"
+      "pre-push": "npm test"
     }
   }
 }
