--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
@@ -39,7 +40,12 @@
       "!**/coverage/**",
       "!**/serviceWorker.js",
       "!**/index.js"
-    ]
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 50
+      }
+    }
   },
   "devDependencies": {
     "husky": "^4.2.3"
