--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.groupby": "^4.6.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.12.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
