--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
